--- a/src/components/panels/selector-row/selector-row.scss
+++ b/src/components/panels/selector-row/selector-row.scss
@@ -2,7 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	gap: 3px;
-	background-color: white;
+	background-color: rgb(255, 255, 255);
 	border-radius: 5px;
 	padding: 4px 8px;
 	cursor: pointer;
@@ -28,6 +28,10 @@
 
 html[data-theme="dark"] {
 	.selector-row {
-		color: rgba(0, 0, 0, 0.88);
+		background-color: rgba(5, 5, 5, 0.06);
+
+		&.selected {
+			background-color: rgb(55, 55, 55);
+		}
 	}
 }
